adjusted spacing on discover cards / adjusted link paths for project to work correctly

--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -15,10 +15,12 @@
         "address"
         "link";
     min-width: 300px;
+    align-items: center;
 }
 
 .discover .card h2{
     grid-area: heading;
+    align-self: first baseline;
 }
 
 .discover .card figure{
