--- a/final-project/styles/site-plan.css
+++ b/final-project/styles/site-plan.css
@@ -7,10 +7,10 @@ main{
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    gap: .5rem;
+    gap: var(--medium);
 }
 
-section{
+main section{
     display: grid;
     gap: 1rem;
     border: 1px solid black;
